--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   geolocator: ^9.0.2
   http: ^1.1.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
+
+
+    
